2004-09-16  Noa Resare  <noa@resare.com>

	* kaffe/kaffevm/kaffe-gc/gc-mem.c (gc_block_alloc):
        Fix freelist corruption when the gc_block array is moved.

2004-09-16  Dalibor Topic  <robilad@kaffe.org>

        * configure.ac:
	Added --with-gjdoc option.

        * tools/Makefile.am:
	Only build gjdoc when requested.

	Reported by: Kiyo Inaba <inaba@src.ricoh.co.jp>

        * Makefile.in,
        configure,
        config/Makefile.in,
        include/Makefile.in,
        kaffe/Makefile.in,
        kaffe/jvmpi/Makefile.in,
        kaffe/kaffe/Makefile.in,
        kaffe/kaffeh/Makefile.in,
        kaffe/kaffevm/Makefile.in,
        kaffe/kaffevm/boehm-gc/Makefile.in,
        kaffe/kaffevm/gcj/Makefile.in,
        kaffe/kaffevm/intrp/Makefile.in,
        kaffe/kaffevm/jit/Makefile.in,
        kaffe/kaffevm/jit3/Makefile.in,
        kaffe/kaffevm/jni/Makefile.in,
        kaffe/kaffevm/kaffe-gc/Makefile.in,
        kaffe/kaffevm/systems/Makefile.in,
        kaffe/kaffevm/systems/beos-native/Makefile.in,
        kaffe/kaffevm/systems/oskit-pthreads/Makefile.in,
        kaffe/kaffevm/systems/unix-jthreads/Makefile.in,
        kaffe/kaffevm/systems/unix-pthreads/Makefile.in,
        kaffe/kaffevm/verifier/Makefile.in,
        kaffe/man/Makefile.in,
        kaffe/scripts/Makefile.in,
        kaffe/scripts/bat/Makefile.in,
        kaffe/scripts/compat/Makefile.in,
        kaffe/xprof/Makefile.in,
        libraries/Makefile.in,
        libraries/clib/Makefile.in,
        libraries/clib/awt/Makefile.in,
        libraries/clib/awt/X/Makefile.in,
        libraries/clib/awt/classpath-gtk/Makefile.in,
        libraries/clib/awt/classpath-gtk/classpath/Makefile.in,
        libraries/clib/awt/classpath-gtk/gtk-peer/Makefile.in,
        libraries/clib/awt/classpath-gtk/resource/Makefile.in,
        libraries/clib/awt/qt/Makefile.in,
        libraries/clib/io/Makefile.in,
        libraries/clib/libxmlj/Makefile.in,
        libraries/clib/management/Makefile.in,